--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -78,13 +78,9 @@ app-root {
   background-color: v.color('white');
   border-radius: v.$radius-xl;
   box-shadow: v.$shadow-lg;
-  padding: v.space('xxl') v.space('xl-xxl');
+  padding: v.space-fluid('xl', 'xxl') v.space('xl-xxl');
   width: 100%;
   max-width: v.$auth-card-width;
-
-  @include m.respond-short {
-    padding: v.space('xl') v.space('xl-xxl');
-  }
 
   @include m.respond-sm {
     padding: v.space('xl') v.space('lg');
